--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
+	"type": "commonjs",
 	"scripts": {
 		"start": "node ./tools/bundler.js ./src ./dist/socketio.lua",
 		"compile": "node ./tools/bundler.js ./src ./dist/socketio.lua --compile",
+		"compile-minify": "node ./tools/bundler.js ./src ./dist/socketio.lua --compile-minify",
+		"test-server": "node ./tools/test-server.js",
 		"test-lune": "lune run ./example/socketio_example.lua"
 	},
-	"dependencies":{"chokidar":"^4.0.3"}
+	"dependencies": {
+		"chokidar": "^4.0.3",
+		"lua-format": "^1.6.1-b",
+		"socket.io": "^4.8.3"
+	}
 }
